<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="#F8F8F2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/transactionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ny_overf_ring"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hvem"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editTransactionSpinner"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/newTransactionAmount"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hvor_mye"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTransactionAmount"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="#000000"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <TextView
            android:id="@+id/newTransactionComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beskrivelse"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTransactionDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="#000000"
            android:textColorHint="#707070"
            android:hint="@string/mat_kl_r_osv"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newTransactionAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:backgroundTint="#A6E22E"
                android:text="@string/legg_til"
                android:textColor="#000000" />

            <Button
                android:id="@+id/newTransactionCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:backgroundTint="#F44336"
                android:text="@string/avbryt"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>