<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutMarco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#66D9EF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMarco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/marco"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/LayoutMarcoInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/LayoutMarcoText"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMarcoExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:text="@string/expense"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textMarcoOwed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CACACA"
                    android:text="@string/owed"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutMarcoVariable"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMarcoExpenseVariable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textMarcoOwedVariable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CACACA"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutIda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F92672"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutMarco">

        <TextView
            android:id="@+id/textIda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ida_marie"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/LayoutIdaInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/LayoutIdaText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textIdaExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    android:text="@string/expense"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textIdaOwed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CACACA"
                    android:textColor="#000000"
                    android:text="@string/owed"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutIdaVariable"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textIdaExpenseVariable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textIdaOwedVariable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CACACA"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F8F8F2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutIda" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addExpense"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#AE81FF"
            android:text="@string/ny_utgift"
            android:textColor="#000000" />

        <Button
            android:id="@+id/addTransfer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FD971F"
            android:text="@string/ny_overf_ring"
            android:textColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>